--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </p>
         </article>
         <aside class="aside">
-            <h2>Author</h2>
+            <h2>Author <span class="mobile">Jestem na mobilce</span></h2>
             <p>
                 industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
                 typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
